--- a/index.html
+++ b/index.html
@@ -173,13 +173,14 @@ select {
 @media(max-width:600px){
   .main {
     flex-direction: column;
-    align-items: center;
+    align-items: center; /* 🔑 centra TODO */
   }
 
   .columns,
   .side-panel {
     width: 100%;
     max-width: 400px;
+    margin: 0 auto;      /* 🔑 centra cada bloque */
   }
 
   .side-panel {
@@ -416,4 +417,5 @@ function resetAll(){
 </body>
 
 </html>
+
 
