--- a/index.html
+++ b/index.html
@@ -170,28 +170,35 @@ select {
   max-width: 100%;
 }
 /* RESPONSIVE */
-@media(max-width:600px){
+@media (max-width: 600px) {
+
   .main {
-    flex-direction: column;
-    align-items: center; /* 🔑 centra TODO */
+    display: block; /* 🔑 rompe el flex en móvil */
+    width: 100%;
   }
 
   .columns,
   .side-panel {
+    display: block;
     width: 100%;
     max-width: 400px;
-    margin: 0 auto;      /* 🔑 centra cada bloque */
+    margin: 0 auto 20px auto; /* 🔑 centrado real */
   }
 
   .side-panel {
-    align-items: stretch;
+    text-align: center;
+  }
+
+  .side-panel .info-box {
+    width: 100%;
+    text-align: left;
   }
 
   .reset-btn {
-    align-self: flex-end;
-    width: auto;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: 0;
     min-width: 140px;
-    margin-top: 20px;
     padding: 10px 18px;
   }
 }
@@ -417,5 +424,6 @@ function resetAll(){
 </body>
 
 </html>
+
 
 
