--- a/index.html
+++ b/index.html
@@ -170,37 +170,33 @@ select {
   max-width: 100%;
 }
 /* RESPONSIVE */
-@media (max-width: 600px) {
-
+@media(max-width:600px){
   .main {
-    display: block; /* 🔑 rompe el flex en móvil */
-    width: 100%;
+    flex-direction: column;
+    align-items: center; /* 🔑 centra TODO */
   }
 
   .columns,
   .side-panel {
-    display: block;
     width: 100%;
     max-width: 400px;
-    margin: 0 auto 20px auto; /* 🔑 centrado real */
+    margin: 0 auto;      /* 🔑 centra cada bloque */
   }
 
   .side-panel {
-    text-align: center;
-  }
-
-  .side-panel .info-box {
-    width: 100%;
-    text-align: left;
+    align-items: stretch;
   }
 
   .reset-btn {
-    display: inline-block;
-    margin-left: auto;
-    margin-right: 0;
+    align-self: flex-end;
+    width: auto;
     min-width: 140px;
+    margin-top: 20px;
     padding: 10px 18px;
   }
+}
+* {
+  box-sizing: border-box;
 }
 </style>
 </head>
@@ -421,6 +417,7 @@ function resetAll(){
 </body>
 
 </html>
+
 
 
 
