--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ select {
   .side-panel {
     width: 100%;
     max-width: 400px;
+    align-self: center;   /* 🔑 clave */
     margin: 0 auto;      /* 🔑 centra cada bloque */
   }
 
@@ -417,6 +418,7 @@ function resetAll(){
 </body>
 
 </html>
+
 
 
 
