--- a/index.html
+++ b/index.html
@@ -170,18 +170,7 @@ select {
   max-width: 100%;
 }
 /* RESPONSIVE */
-@media(max-width:600px){
-  .main {
-    flex-direction: column;
-    align-items: center; /* 🔑 centra TODO */
-  }
-
-  .columns,
-  .side-panel {
-    width: 100%;
-    max-width: 400px;
-    
-  @media (max-width: 600px) {
+@media (max-width: 600px) {
 
   .main {
     display: grid;
@@ -198,11 +187,13 @@ select {
   .side-panel {
     width: 100%;
     max-width: 400px;
+    align-self: center;
   }
 
   .reset-btn {
     width: auto;
-    align-self: end;
+    align-self: flex-end;
+    margin-top: 10px;
   }
 }
 </style>
@@ -424,6 +415,7 @@ function resetAll(){
 </body>
 
 </html>
+
 
 
 
