--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ select {
   .side-panel {
     width: 100%;
     max-width: 400px;
-    align-self: center;
+    align-self: right;
   }
 
   .reset-btn {
@@ -415,6 +415,7 @@ function resetAll(){
 </body>
 
 </html>
+
 
 
 
