--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@ select {
 
   .side-panel {
     width: 100%;
-    max-width:-200px;
-    align-self: right;
+    max-width:0px;
+    align-self: centert;
   }
 
   .reset-btn {
@@ -415,6 +415,7 @@ function resetAll(){
 </body>
 
 </html>
+
 
 
 
