--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@ select {
   }
 
   .columns {
-    width: 80%;
+    width: 100%;
     max-width: 400px;
   }
 
   .side-panel {
-    width: 80%;
+    width: 100%;
     max-width:0px;
-    align-self: centert;
+    align-self:left;
   }
 
   .reset-btn {
@@ -415,6 +415,7 @@ function resetAll(){
 </body>
 
 </html>
+
 
 
 
