--- a/index.html
+++ b/index.html
@@ -182,12 +182,13 @@ select {
   .columns {
     width: 100%;
     max-width: 400px;
+    align-self:left;
   }
 
   .side-panel {
     width: 100%;
     max-width:0px;
-    align-self:left;
+    align-self:right;
   }
 
   .reset-btn {
@@ -415,6 +416,7 @@ function resetAll(){
 </body>
 
 </html>
+
 
 
 
