--- a/index.html
+++ b/index.html
@@ -178,6 +178,21 @@ select {
     justify-items: center;
     row-gap: 20px;
   }
+   .side-panel {
+    width: 100%;
+    max-width:0px;
+    align-self:right;
+  }
+  .columns {
+    width: 100%;
+    max-width: 500px;
+    align-self:left;
+  }
+  .reset-btn {
+    width: auto;
+    align-self: flex-end;
+    margin-top: 20px;
+  }
 }
 </style>
 </head>
@@ -398,6 +413,7 @@ function resetAll(){
 </body>
 
 </html>
+
 
 
 
