--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@ select {
   }
 
   .reset-btn {
-    align-self: flex-end;
+    align-self: right;
     width: auto;
-    margin-top: 50px;
+    margin-top: 35px;
   }
 
 }
@@ -416,6 +416,7 @@ function resetAll(){
 </body>
 
 </html>
+
 
 
 
