--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ select, button{
 
 .reset-btn{
   margin-top:30px;
-  background:#df1010;
+  background:#df52d8;
   color:#fff;
   opacity:.85;
 }
@@ -416,6 +416,7 @@ function resetAll(){
 </body>
 
 </html>
+
 
 
 
