--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ select {
   .reset-btn {
     align-self: right;
     width: auto;
-    margin-top: 35px;
+     margin-left: -10px;
   }
 
 }
@@ -416,6 +416,7 @@ function resetAll(){
 </body>
 
 </html>
+
 
 
 
