--- a/index.html
+++ b/index.html
@@ -242,15 +242,13 @@ select {
     margin-top: 30px; /* separación del panel derecho */
   }
   /* ===== REFS RED (VISUAL) ===== */
+  .user.active,
   .user.lider-ref {
     padding: 6px 8px;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 1.2;
   }
-  /* ajuste final de tamaño (prioridad más baja) */
-  .user.lider-ref {
-    font-size: 9px;
-  }
+  
   /* ===== SELECT DE MONTO EN REFS RED ===== */
   .user.lider-ref .ref-select {
     margin-top: 4px;
@@ -594,6 +592,7 @@ document.querySelectorAll('.lider-ref')
 </body>
 
 </html>
+
 
 
 
