--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@ select, button{
   border:none;
   font-size:14px;
 }
+/* ===================== TOP PANEL ===================== */
+.top-panel{
+  max-width: 460px;
+  margin: 0 auto 18px;
+  padding: 14px;
+  border-radius: 18px;
+
+  background: linear-gradient(180deg, #1a1a1a, #111);
+  border: 2px solid rgba(233, 232, 225, 0.08);
+
+  box-shadow:
+    0 0 14px rgba(0,0,0,.8),
+    inset 0 0 6px rgba(255,255,255,.05);
+}
 /* ===================== CONTROLES ===================== */
 .controls{
   display:flex;
@@ -33,6 +47,35 @@ select, button{
   gap:10px;
   flex-wrap:wrap;
   margin-bottom:15px;
+}
+.controls select{
+  background: linear-gradient(180deg, #1f1f1f, #121212);
+  color:#5193c2;
+
+  border:2px solid rgba(90, 22, 250, 0.411);
+  border-radius:12px;
+
+  box-shadow:
+    inset 0 0 6px rgba(0, 0, 0, 0.397),
+    0 0 6px rgba(247, 245, 245, 0.6);
+
+  transition: all .25s ease;
+  .controls select:hover{
+  border-color:#64b5f6; 
+}
+.controls select:focus{
+  outline:none;
+  border-color:#c50505;
+
+  box-shadow:
+    0 0 8px rgba(2, 52, 94, 0.8),
+    inset 0 0 4px rgba(255,255,255,.2);
+}
+.controls select:disabled{
+  opacity:.6;
+  cursor:not-allowed;
+  filter: grayscale(.5);
+}
 }
 /* ===================== POWER BAR ===================== */
 .power-container{
@@ -43,12 +86,15 @@ select, button{
   height:28px;
   position:relative;
   overflow:hidden;
-}
+  border:2px solid rgba(40, 77, 197, 0.08);
+  box-shadow: inset 0 0 6px rgba(22, 11, 172, 0.8);
 
+}
 .power-bar{
   height:100%;
   width:0%;
-  transition: width .8s, background .6s;
+  transition:width 1s cubic-bezier(.4,0,.2,1),
+    background .6s ease;
 }
 
 .power-text{
@@ -59,6 +105,9 @@ select, button{
   justify-content:center;
   font-weight:bold;
   color:#fff;
+  font-size:15px;
+  letter-spacing:.5px;
+  text-shadow:0 0 4px rgba(0,0,0,.8);
 }
 /* ===================== LAYOUT GENERAL===================== */
 .main{
@@ -80,25 +129,33 @@ select, button{
 
 /* ===================== REF BASE ===================== */
 .user{  
-  background:#20a2df;
+  background:#03a5f0;
   padding:15px 10px;
   border-radius:10px;
   text-align:center;
   cursor:pointer;
   font-size:15px;
   line-height:1.5;
-  box-shadow:0 0 10px rgba(3, 57, 107, 0.6);
+  border: 2px solid rgba(14, 4, 107, 0.514);
+  box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.705);
+  transition: all 0.25s ease;
 }
 .user.active{
   background:#02e70e;
   color:#424242;
   font-weight:bold;
+  border: 2px solid #90caf9;
+  box-shadow:
+    0 0 6px rgba(4, 97, 4, 0.6),
+    inset 0 0 4px rgba(12, 8, 8, 0.3);
+
+  transform: scale(1.02);
 }
 .user.active{
   padding: 6px 8px;
   font-size: 18px;
   line-height: 1.2;
-}
+} 
 .user small{
   display: block;
   font-size: 10px;
@@ -121,6 +178,19 @@ select, button{
   box-shadow:0 0 6px rgba(206,147,216,.6);
   padding: 4px 6px !important;
   line-height: 1.2;
+box-shadow:
+    0 0 8px rgba(206,147,216,.8),
+    inset 0 0 6px rgba(255,255,255,.15);
+
+  transition: all 0.25s ease;
+}
+.user:hover{
+  transform: translateY(-1px);
+}
+
+.user.active:hover,
+.user.lider-ref:hover{
+  filter: brightness(1.08);
 }
 .user.lider-ref:hover{
   filter: brightness(1.15);
@@ -133,6 +203,38 @@ select, button{
 .user.lider-ref small{
   font-size: 10px;
   margin-top: 2px;
+}
+/* ===================== BOTÓN RED ===================== */
+.lider-btn{
+  background: linear-gradient(135deg, #852ac242, #730577);
+  color:#d5dadd;
+
+  border-radius:14px;
+  padding:12px;
+
+  font-weight:700;
+  letter-spacing:.6px;
+
+  border:2px solid rgba(255, 255, 255, 0.747);
+
+  box-shadow:
+    0 0 12px rgba(207, 129, 218, 0.5),
+    inset 0 0 6px rgba(97, 13, 79, 0);
+
+  cursor:pointer;
+  transition: all .25s ease;
+}
+.lider-btn:hover{
+  filter:brightness(1.15);
+  transform: translateY(-1px);
+  box-shadow:
+    0 0 18px rgba(33,150,243,.8),
+    inset 0 0 8px rgba(255,255,255,.15);
+}
+.lider-btn:active{
+  transform: translateY(1px) scale(.98);
+  box-shadow:
+    inset 0 0 12px rgba(0,0,0,.8);
 }
 /* =============== PANEL DERECHO =============== */
 .side-panel{
@@ -161,8 +263,43 @@ select, button{
   color:#fff;
   opacity:.85;
 }
+/* ===================== BOTÓN RESET ===================== */
+.reset-btn{
+  background: linear-gradient(135deg, #b71c1c, #7f0000);
+  color:#ddbcc1;
+
+  border-radius:14px;
+  padding:12px;
+
+  font-weight:700;
+  letter-spacing:.6px;
+
+  border:2px solid rgba(233, 214, 214, 0.678);
+
+  box-shadow:
+    0 0 12px rgba(183,28,28,.5),
+    inset 0 0 6px rgba(255,255,255,.08);
+
+  cursor:pointer;
+  transition: all .25s ease;
+}
 .reset-btn:hover{ 
   opacity:1; 
+  .reset-btn:hover{
+  filter:brightness(1.1);
+  transform: translateY(-1px);
+  box-shadow:
+    0 0 20px rgba(244,67,54,.8),
+    inset 0 0 8px rgba(202, 33, 33, 0.15);
+}
+.reset-btn:active{
+  transform: translateY(1px) scale(.98);
+  box-shadow:
+    inset 0 0 14px rgba(230, 223, 223, 0.85);
+    background: linear-gradient(135deg, #676e6a, #2e7d32);
+  box-shadow:
+    0 0 16px rgba(200, 0, 200, 0.281);
+}
 }
 .lider-btn{
   background: #15425c;
@@ -175,27 +312,71 @@ select, button{
 }
 /* ===============VOLUMEN BOX =============== */
 .volume-box{
-  background:#1a1a1a;
-  padding:6px;
-  border-radius:10px;
+  background: linear-gradient(180deg, #1e1e1e, #111);
+  padding:8px;
+  border-radius:14px;
   text-align:center;
+
+  border:1px solid rgba(255, 255, 255, 0.555);
+
+  box-shadow:
+    0 0 12px rgba(162, 229, 231, 0.8),
+    inset 0 0 8px rgba(255,255,255,.05);
+
+  position: relative;
+  overflow: hidden;
 }
 .volume-box strong{
   font-size:12px;
-  color:#853785;
+  color:#b388ff;
+  letter-spacing:.4px;
 }
 .volume-bar-container{
-  width:100%;
-  height:8px;
-  background:#333;
-  border-radius:6px;
+   width:100%;
+  height:10px;
+  background: rgba(255, 255, 255, 0.08);
+  border-radius:8px;
   overflow:hidden;
-  margin-top:6px;
+  margin-top:8px;
+  position: relative;
 }
 .volume-bar{
   height:100%;
   width:0%;
-  transition: width 0.8s ease, background 0.6s ease;
+
+  background: linear-gradient(
+    180deg,
+    rgba(255,255,255,.35),
+    rgba(255,255,255,.05)
+  );
+
+  border-radius:8px;
+
+  position: relative;
+  overflow: hidden;
+
+  transition: width 0.9s cubic-bezier(.22,1,.36,1);
+}
+.volume-bar{
+  height:100%;
+  width:0%;
+
+  background: linear-gradient(
+    180deg,
+    rgba(35, 150, 165, 0.35),
+    rgba(48, 224, 128, 0.911)
+  );
+
+  border-radius:8px;
+
+  position: relative;
+  overflow: hidden;
+
+  transition: width 0.9s cubic-bezier(.22,1,.36,1);
+}
+@keyframes liquidMove{
+  from { transform: translateX(0); }
+  to   { transform: translateX(-50%); }
 }
 /* =============== SELECT =============== */
 select {
@@ -226,6 +407,8 @@ select {
   .reset-btn {
     width: 100%;
     display: block;
+    min-height:44px; /* estándar móvil */
+  touch-action: manipulation;
   }
   .lider-btn {
     margin-top: 20px;
@@ -245,7 +428,7 @@ select {
   .user.active,
   .user.lider-ref {
     padding: 6px 8px;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 1.2;
   }
   
@@ -264,6 +447,7 @@ select {
 
 <h1>Calculadora Click It</h1>
 
+<div class="top-panel">
 <div class="power-container">
   <div id="powerBar" class="power-bar"></div>
   <div id="powerText" class="power-text">0%</div>
@@ -592,18 +776,6 @@ document.querySelectorAll('.lider-ref')
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
