--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body{
   font-family: Arial, sans-serif;
   background:#0f0f0f;
-  color:#7b8122;
+  color:#274cc7;
   margin:0;
   padding:20px;
 }
@@ -411,7 +411,7 @@ select {
   touch-action: manipulation;
   }
   .lider-btn {
-    margin-top: 30px;
+    margin-top: 10px;
   }
   .lider-btn:hover {
     opacity: 1;
@@ -776,6 +776,7 @@ document.querySelectorAll('.lider-ref')
 </body>
 
 </html>
+
 
 
 
