--- a/index.html
+++ b/index.html
@@ -417,8 +417,9 @@ select {
     opacity: 1;
   }
   .reset-btn {
-    align-self: right;
+    align-self: center;
     width: 70%;
+    display: block;
     margin-left: -40px;
   }
   .action-buttons {
@@ -776,6 +777,7 @@ document.querySelectorAll('.lider-ref')
 </body>
 
 </html>
+
 
 
 
